# csfd-db

./: Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
app/: main.py
csfd_db/: auth.py  config.py  db.py  main.py  models.py  routes.py  schemas.py  security.py
csfd_db/templates/: upload.html
